# houdini-attribute-connectivity

./: .gitattributes  CMakeLists.txt  README.md  build.sh
include/: SOP_AttributeConnectivity.h
src/: SOP_AttributeConnectivity.C
tests/system-tests/: start-system-tests.sh  system-tests.py
tests/unit-tests/: mainTests.cpp
tests/unit-tests/geometry/: grid_10x10.geo  grid_10x10_activegrp.geo  grid_10x10_after.geo  grid_10x10_before.geo  grid_10x10_singlepatch_activegrp.geo
tests/visual-tests/: .gitignore  display.sh  export.py
